Fixes spacing on social media logins

--- a/app/public/css/style.less
+++ b/app/public/css/style.less
@@ -342,3 +342,21 @@ tr {
 .topic-avatar-cell {
   width: 167px;
 }
+
+.btn-toolbar{
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+} 
+.btn-toolbar .btn{
+    -webkit-box-flex-grow: 1;
+    -moz-box-flex-grow: 1;
+    -webkit-flex-grow: 1;
+    -ms-flex-grow: 1;
+    flex-grow: 1;
+}
